--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	"require-dev": {
 		"consistence/coding-standard": "2.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
-		"jakub-onderka/php-parallel-lint": "0.9.2"
+		"jakub-onderka/php-parallel-lint": "0.9.2",
+		"phpunit/phpunit": "6.2.3"
 	},
 	"config": {
 		"bin-dir": "bin"
