--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,30 @@
 			"homepage": "http://vasekpurchart.cz"
 		}
 	],
+	"require": {
+		"symfony/config": "~3.0",
+		"symfony/dependency-injection": "~3.0",
+		"symfony/http-kernel": "~3.0",
+		"symfony/yaml": "~3.0"
+	},
 	"require-dev": {
 		"consistence/coding-standard": "2.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
 		"jakub-onderka/php-parallel-lint": "0.9.2",
 		"phing/phing": "2.16",
 		"phpunit/phpunit": "6.2.3"
+	},
+	"autoload": {
+		"psr-4": {
+			"VasekPurchart\\RabbitMqDatabaseTransactionProducerBundle\\": "src"
+		},
+		"classmap": [ "src" ]
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"VasekPurchart\\RabbitMqDatabaseTransactionProducerBundle\\": "tests"
+		},
+		"classmap": [ "tests" ]
 	},
 	"config": {
 		"bin-dir": "bin"
