--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		}
 	],
 	"require": {
+		"doctrine/doctrine-bundle": "~1.3",
 		"symfony/config": "~3.0",
 		"symfony/dependency-injection": "~3.0",
 		"symfony/http-kernel": "~3.0",
