--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
 	],
 	"require": {
 		"doctrine/doctrine-bundle": "~1.3",
+		"php-amqplib/rabbitmq-bundle": "~1.9",
 		"symfony/config": "~3.0",
-		"symfony/dependency-injection": "~3.0",
+		"symfony/dependency-injection": "~3.2",
 		"symfony/http-kernel": "~3.0",
 		"symfony/yaml": "~3.0"
 	},
@@ -20,6 +21,7 @@
 		"consistence/coding-standard": "2.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
 		"jakub-onderka/php-parallel-lint": "0.9.2",
+		"matthiasnoback/symfony-dependency-injection-test": "2.1",
 		"phing/phing": "2.16",
 		"phpunit/phpunit": "6.2.3"
 	},
