--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 	"require": {
 		"doctrine/doctrine-bundle": "~1.3",
 		"php-amqplib/rabbitmq-bundle": "~1.9",
+		"psr/log": "~1.0",
 		"symfony/config": "~3.0",
 		"symfony/dependency-injection": "~3.2",
 		"symfony/http-kernel": "~3.0",
