--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 	},
 	"require-dev": {
 		"consistence/coding-standard": "2.4",
+		"doctrine/common": "~2.7",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
 		"jakub-onderka/php-parallel-lint": "1.0",
 		"matthiasnoback/symfony-dependency-injection-test": "2.3.1",
