--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		}
 	],
 	"require": {
+		"php": "~7.1",
 		"doctrine/doctrine-bundle": "~1.3",
 		"php-amqplib/rabbitmq-bundle": "~1.9",
 		"psr/log": "~1.0",
