--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
 		"doctrine/doctrine-bundle": "~1.3",
 		"php-amqplib/rabbitmq-bundle": "~1.9",
 		"psr/log": "~1.0",
-		"symfony/config": "~3.0",
-		"symfony/dependency-injection": "~3.2",
-		"symfony/http-kernel": "~3.0",
-		"symfony/yaml": "~3.0"
+		"symfony/config": "~3.0|~4.0",
+		"symfony/dependency-injection": "~3.2|~4.0",
+		"symfony/http-kernel": "~3.0|~4.0",
+		"symfony/yaml": "~3.0|~4.0"
 	},
 	"require-dev": {
 		"consistence/coding-standard": "3.7",
