--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	},
 	"require-dev": {
 		"consistence/coding-standard": "3.7",
+		"doctrine/dbal": "^2.11|^3.0",
 		"doctrine/common": "~2.7",
 		"jakub-onderka/php-console-highlighter": "0.4",
 		"jakub-onderka/php-parallel-lint": "1.0",
