--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"symfony/yaml": "~3.0|~4.0"
 	},
 	"require-dev": {
-		"consistence/coding-standard": "3.7",
+		"consistence/coding-standard": "3.10.1",
 		"doctrine/dbal": "^2.11|^3.0",
 		"doctrine/common": "~2.7",
 		"matthiasnoback/symfony-dependency-injection-test": "4.3",
@@ -42,6 +42,9 @@
 		"classmap": [ "tests" ]
 	},
 	"config": {
-		"bin-dir": "bin"
+		"bin-dir": "bin",
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": false
+		}
 	}
 }
