--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 	],
 	"require": {
 		"php": "~7.2",
+		"doctrine/dbal": "^2.11|^3.0",
 		"doctrine/doctrine-bundle": "~1.3",
 		"php-amqplib/rabbitmq-bundle": "~1.9",
 		"psr/log": "~1.0",
@@ -21,8 +22,8 @@
 	},
 	"require-dev": {
 		"consistence/coding-standard": "3.10.1",
-		"doctrine/dbal": "^2.11|^3.0",
 		"matthiasnoback/symfony-dependency-injection-test": "4.3",
+		"maglnet/composer-require-checker": "2.0",
 		"php-parallel-lint/php-console-highlighter": "1.0",
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
 		"phing/phing": "2.17.2",
