--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
 		}
 	],
 	"require": {
-		"php": "~7.2",
+		"php": "^7.2",
 		"doctrine/dbal": "^2.11|^3.0",
-		"doctrine/doctrine-bundle": "~1.3",
-		"php-amqplib/rabbitmq-bundle": "~1.9",
-		"psr/log": "~1.0",
-		"symfony/config": "~3.0|~4.0",
-		"symfony/dependency-injection": "~3.2|~4.0",
-		"symfony/http-kernel": "~3.0|~4.0",
-		"symfony/yaml": "~3.0|~4.0"
+		"doctrine/doctrine-bundle": "^1.3",
+		"php-amqplib/rabbitmq-bundle": "^1.9",
+		"psr/log": "^1.0",
+		"symfony/config": "^3.0|^4.0",
+		"symfony/dependency-injection": "^3.2|^4.0",
+		"symfony/http-kernel": "^3.0|^4.0",
+		"symfony/yaml": "^3.0|^4.0"
 	},
 	"require-dev": {
 		"consistence/coding-standard": "3.10.1",
